# libsociopathy

./: README.md
libsociopathy/: CMakeLists.txt  libsociopathy.pro
libsociopathy/CMakeModules/: FindSqlite3.cmake
libsociopathy/include/: LSCLang.h  LSCPlatformTools.h  LSCSettings.h  PlatformTools.h  libsociopathy.h  libsociopathy_global.h
libsociopathy/src/: LSCLang.cpp  LSCPlatformTools.cpp  LSCSettings.cpp  PlatformTools.cpp  libsociopathy.cpp
libsociopathy/testSrc/: main.cpp
